Added MapReduceModule and Endpoints.
Added rendering to JSON with built int Jackson.

--- a/src/ratpack/application.properties
+++ b/src/ratpack/application.properties
@@ -3,6 +3,6 @@ hadoop.yarnRMHost=localhost
 hadoop.yarnRMPort=8032
 hadoop.yarnRMSchedulerHost=localhost
 hadoop.yarnRMSchedulerPort=8030
-hadoop.mapreduceType=local
-hadoop.fsHost=localhost
-hadoop.fsPort=54310
+hadoop.mapReduceType=local
+hadoop.fileSystemHost=localhost
+hadoop.fileSystemPort=54310
