--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,12 @@ dependencies {
   compile "org.projectlombok:lombok:1.16.4"
 
   // Hadoop client libraries
-//  compile ("org.apache.hadoop:hadoop-client:2.7.1") {
-//    exclude group: "org.slf4j"
-//  }
+  compile ("org.apache.hadoop:hadoop-client:2.7.1") {
+    exclude group: "org.slf4j"
+    exclude group: "com.google.guava", module: "guava"
+    exclude group: "log4j", module: "log4j"
+    exclude group: "io.netty", module: "netty-all"
+  }
 
   // SpringLoaded enables runtime hot reloading.
   // It is not part of the app runtime and is not shipped in the distribution.
