--- a/src/ratpack/application.properties
+++ b/src/ratpack/application.properties
@@ -4,5 +4,6 @@ hadoop.yarnRMPort=8032
 hadoop.yarnRMSchedulerHost=localhost
 hadoop.yarnRMSchedulerPort=8030
 hadoop.mapReduceType=local
+#hadoop.mapReduceType=yarn
 hadoop.fileSystemHost=localhost
 hadoop.fileSystemPort=54310
